More cleanup of printing code.